# roapi

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE.txt  README.md  Readme_cmake.md  flake.nix  test_s3.yml
.cargo/: config.toml
.devcontainer/: db-migration.sql  devcontainer.json  docker-compose.yml
.github/workflows/: build.yml  columnq_cli_release.yml  release.yml  roapi_http_release.yml  roapi_release.yml  scheduled_security_audit.yml
ci/scripts/: populate_azure.sh  populate_gcs.sh  populate_minio.sh  setup_azure.sh  setup_gcs.sh  setup_minio.sh
columnq/: Cargo.toml
columnq-cli/: Cargo.toml  README.md
columnq-cli/src/: main.rs
columnq/src/: columnq.rs  error.rs  lib.rs  test_util.rs
columnq/src/encoding/: arrow.rs  csv.rs  json.rs  mod.rs  parquet.rs
columnq/src/io/: fs.rs  http.rs  memory.rs  mod.rs  object_store.rs  s3.rs
columnq/src/query/: graphql.rs  mod.rs  rest.rs  sql.rs
columnq/src/table/: arrow_ipc_file.rs  arrow_ipc_stream.rs  csv.rs  database.rs  delta.rs  excel.rs  google_spreadsheets.rs  iceberg.rs  json.rs  mod.rs  ndjson.rs  parquet.rs  xlsx.rs
columnq/tests/: table_csv_test.rs  table_iceberg_test.rs  table_mysql_test.rs  table_postgres_test.rs  table_sqlite_test.rs  table_trino_test.rs
data/: ubuntu-ami.json
docs/: roapi.drawio
roapi/: Cargo.toml  build.rs  config.yml
roapi-http/: Cargo.toml
roapi-http/src/: config.rs  error.rs  lib.rs  main.rs  startup.rs
roapi-http/src/api/: graphql.rs  kv.rs  mod.rs  register.rs  rest.rs  routes.rs  schema.rs  sql.rs
roapi-http/tests/: api_test.rs  helpers.rs
roapi-http/tests/api/: helpers.rs  main.rs
roapi-ui/: Cargo.toml  Trunk.toml  index.html
roapi-ui/assets/: manifest.json  sw.js
roapi-ui/src/: app.rs  main.rs
roapi/src/: config.rs  context.rs  error.rs  lib.rs  main.rs  startup.rs
roapi/src/api/: drop.rs  graphql.rs  health.rs  kv.rs  mod.rs  register.rs  rest.rs  routes.rs  schema.rs  sql.rs
roapi/src/server/: flight_sql.rs  mod.rs  postgres.rs
roapi/src/server/http/: layers.rs  mod.rs  ui.rs
roapi/tests/: api_test.rs  config_test.rs  flight_sql_test.rs  helpers.rs  http_table_test.rs  partitioned_table_test.rs  postgres_test.rs
src/: config.rs  error.rs  lib.rs  main.rs  main_test.rs
src/api/: graphql.rs  mod.rs  rest.rs  schema.rs  sql.rs
src/encoding/: arrow.rs  json.rs
src/query/: graphql.rs  mod.rs  rest.rs  sql.rs  test.rs
src/table/: csv.rs  google_spreadsheets.rs  json.rs  mod.rs  parquet.rs  test.rs
test_data/: blogs_flattened.parquet  config.yaml  excel_range.ods  spacex_launches.json  spacex_launches.jsonl  test_datafusion_config.yml  uk_cities_with_headers.arrow  uk_cities_with_headers.arrows  uk_cities_with_headers.xlsx
test_data/blogs-delta/: .part-00000-91e75e45-f604-46ac-aa68-b3542389889a-c000.snappy.parquet.crc  part-00000-91e75e45-f604-46ac-aa68-b3542389889a-c000.snappy.parquet
test_data/partitioned_csv/year=2022/month=12/: p001.csv
test_data/partitioned_csv/year=2023/month=1/: p001.csv
test_data/sqlite/: sample.db
test_end_to_end/: query_blogs.sh  test_object_store_direct.yml  test_object_store_memory.yml  test_s3.yml  test_s3_direct.yml  test_s3_memory.yml
