[workspace]
members = ["columnq", "columnq-cli", "roapi"]
resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[profile.test]
split-debuginfo = "unpacked"

[profile.release]
lto = true
codegen-units = 1

[patch.crates-io]
delta_kernel = { git = "https://github.com/houqp/delta-kernel-rs", rev = "92aa4cbd6d29c393d806f89bf5acdbaf4cb35ae1" }
