[package]
name = "columnq-cli"
version = "0.1.2"
homepage = "https://github.com/roapi/roapi"
license = "MIT"
readme = "README.md"
authors = ["QP Hou <dave2008713@gmail.com>"]
edition = "2018"

[[bin]]
name = "columnq"
path = "src/main.rs"

[dependencies]
columnq = { path = "../columnq", version = "0" }

serde_json = "*"
log = "0"
tokio = "1"
rustyline = { version = "9" }
env_logger = { version = "0" }
anyhow = { version = "1" }
clap = { version = ">=3.0.0-beta.2,<4", features = ["color"] }
dirs = { version = "3" }

[features]
default = ["rustls"]
rustls = ["columnq/rustls"]
native-tls-vendored = ["columnq/native-tls-vendored"]
simd = ["columnq/simd"]

[dev-dependencies]
pretty_assertions = "*"
