[package]
name = "columnq"
version = "0.9.1"
homepage = "https://github.com/roapi/roapi"
license = "MIT"
authors = ["QP Hou <dave2008713@gmail.com>"]
edition = "2021"

[lib]
name = "columnq"
path = "src/lib.rs"

[dependencies]
# pulling arrow-schema manually to enable the serde feature.
# TODO: add serde feature in datafusion to avoid this workaround
arrow-schema = { version = "52", features = ["serde"] }

datafusion = "39"
object_store = { version = "0", features = ["aws", "gcp", "azure"] }
percent-encoding = "2.2.0"
url = "2.2"

log = "0"
regex = "1"
lazy_static = "1"
graphql-parser = "0"
sqlparser = "0.44" # version need to be in sync with convergence and datafusion
yup-oauth2 = { version = "9", default-features = false, features = [
    "service_account",
] }
thiserror = "1"
snafu = "0"
serde_json = { version = "1" }
serde_derive = "1"
serde = "1"
uriparse = "0"
bytes = { version = "1" }
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "json",
] }
calamine = {version = "0.23.1", features = ["dates"]}

tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
hyper-tls = { version = "0.5.0", default-features = false, optional = true }
hyper-rustls = { version = "0.25", default-features = false, optional = true }
tokio-postgres = { version = "0.7.8", optional = true }

[dependencies.deltalake]
version = "0.18.1"
# git = "https://github.com/delta-io/delta-rs.git"
# rev = "63c14b3716428ff65e01404c6f7e62f341c98f05"
features = ["datafusion", "s3", "gcs", "azure"]
default-features = false

[dependencies.connectorx]
git = "https://github.com/roapi/connector-x.git"
rev = "f7ba1c38130e554cdb7dc4e04d7a166e3286d4e7"
version = "0.3.3-alpha.1"
features = ["default", "dst_arrow"]
optional = true

[dev-dependencies]
serde_yaml = "0.9"
toml = "0.7"
tempfile = "3.3.0"
pretty_assertions = "*"
dotenvy = "*"
rusqlite = "0"

[features]
default = ["rustls"]
rustls = [
    "hyper-rustls",
    "reqwest/rustls-tls",
    "deltalake/s3",
    "deltalake/azure",
    "yup-oauth2/hyper-rustls",
]
native-tls-vendored = [
    "reqwest/native-tls-vendored",
    "hyper-tls/vendored",
    "deltalake/s3",
    "deltalake/azure",
    "yup-oauth2/hyper-tls",
]
native-tls = [
    "reqwest/native-tls",
    "hyper-tls",
    "deltalake/s3",
    "deltalake/azure",
    "yup-oauth2/hyper-tls",
]
database-sqlite = ["connectorx/src_sqlite"]
database-mysql = ["connectorx/src_mysql"]
database-postgres = ["connectorx/src_postgres", "dep:tokio-postgres"]
database = [
    "database-sqlite",
    "database-mysql",
    "database-postgres"
]
