[package]
name = "columnq"
version = "0.9.1"
homepage = "https://github.com/roapi/roapi"
license = "MIT"
authors = ["QP Hou <dave2008713@gmail.com>"]
edition = "2021"

[lib]
name = "columnq"
path = "src/lib.rs"

[dependencies]
url = "2.5"
log = "0.4"
regex = "1"
lazy_static = "1.5"
thiserror = "1"
snafu = "0.8"
serde_json = { version = "1" }
serde_derive = "1"
serde = "1"
uriparse = "0"
bytes = { version = "1" }
percent-encoding = "2.3"

# datafusion
datafusion = { version = "42", features = ["serde"] }

# spreadsheets reader
calamine = { version = "0.23.1", features = ["dates"] }

# graphql
graphql-parser = "0.4"

# async
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"

# net
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
] }
hyper-tls = { version = "0.6.0", default-features = false, optional = true }
hyper-rustls = { version = "0.27", default-features = false, optional = true }

object_store = { version = "0.11", features = ["aws", "gcp", "azure"] }
tokio-postgres = { version = "0.7.12", optional = true }
deltalake = { version = "0.20", features = [
    "datafusion",
    "datafusion-ext",
    "s3",
    "gcs",
    "azure",
] }
yup-oauth2 = { version = "10", default-features = false, features = [
    "service_account",
] }

[dependencies.connectorx]
git = "https://github.com/roapi/connector-x.git"
rev = "f7ba1c38130e554cdb7dc4e04d7a166e3286d4e7"
version = "0.3.3-alpha.1"
features = ["default", "dst_arrow"]
optional = true

[dev-dependencies]
serde_yaml = "0.9"
toml = "0.7"
tempfile = "3.3.0"
pretty_assertions = "*"
dotenvy = "*"
rusqlite = "0"

[features]
default = ["rustls"]
rustls = [
    "hyper-rustls",
    "reqwest/rustls-tls",
    "deltalake/s3",
    "deltalake/azure",
    "yup-oauth2/hyper-rustls",
]
native-tls-vendored = [
    "reqwest/native-tls-vendored",
    "hyper-tls/vendored",
    "deltalake/s3",
    "deltalake/azure",
    "yup-oauth2/hyper-tls",
]
native-tls = [
    "reqwest/native-tls",
    "hyper-tls",
    "deltalake/s3",
    "deltalake/azure",
    "yup-oauth2/hyper-tls",
]
database-sqlite = ["connectorx/src_sqlite"]
database-mysql = ["connectorx/src_mysql"]
database-postgres = ["connectorx/src_postgres", "dep:tokio-postgres"]
database = ["database-sqlite", "database-mysql", "database-postgres"]
