[package]
name = "columnq"
version = "0.9.4"
homepage = "https://github.com/roapi/roapi"
license = "MIT"
authors = ["QP Hou <dave2008713@gmail.com>"]
edition = "2021"

[lib]
name = "columnq"
path = "src/lib.rs"

[dependencies]
url = "2.5"
log = "0.4"
regex = "1"
thiserror = "1"
snafu = "0.8"
serde_json = { version = "1" }
serde_derive = "1"
serde = "1"
uriparse = "0"
bytes = { version = "1" }
percent-encoding = "2.3"

# datafusion
datafusion = { version = "47", features = ["serde"] } 
arrow = { version = "55.0.0", features = ["prettyprint"] }

# spreadsheets reader
calamine = { version = "0.23.1", features = ["dates"] }

# graphql
graphql-parser = "0.4"

# async
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"

# net
reqwest = { version = "0", default-features = false, features = [
    "blocking",
    "json",
] }
hyper-tls = { version = "0", default-features = false, optional = true }
hyper-rustls = { version = "0", default-features = false, optional = true }

object_store = { version = "0.12", features = ["http", "aws", "gcp", "azure"] }
tokio-postgres = { version = "0.7.12", optional = true }
deltalake = { version = "0.26", features = [
    "datafusion",
    "datafusion-ext",
    "s3",
    "gcs",
    "azure",
] }
yup-oauth2 = { version = "10", default-features = false, features = [
    "service_account",
] }

[dependencies.connectorx]
git = "https://github.com/sfu-db/connector-x.git"
version = "0.4.4-alpha.1" # Updated to the latest version found
features = ["fptr", "src_trino", "dst_"] # Added fptr (default), kept src_trino and dst_arrow
optional = true

[dev-dependencies]
serde_yaml = "0.9"
toml = "0.7"
tempfile = "3.3.0"
pretty_assertions = "*"
dotenvy = "*"
rusqlite = "0.33.0"

[features]
default = ["rustls"]
rustls = [
    "hyper-rustls",
    "reqwest/rustls-tls",
    "deltalake/s3",
    "deltalake/azure",
    "yup-oauth2/hyper-rustls",
    "hyper-tls?/vendored",
]
native-tls-vendored = [
    "reqwest/native-tls-vendored",
    "hyper-tls?/vendored",
    "deltalake/s3",
    "deltalake/azure",
    "yup-oauth2/hyper-tls",
]
native-tls = [
    "reqwest/native-tls",
    "hyper-tls",
    "deltalake/s3",
    "deltalake/azure",
    "yup-oauth2/hyper-tls",
]
database-sqlite = ["connectorx/src_sqlite"]
database-mysql = ["connectorx/src_mysql"]
database-postgres = ["connectorx/src_postgres", "dep:tokio-postgres"]
database-trino = ["connectorx/src_trino"]
database = ["database-sqlite", "database-mysql", "database-postgres", "database-trino"]
