[package]
name = "roapi-http"
version = "0.3.4"
authors = ["Qingping Hou <dave2008713@gmail.com>"]
edition = "2018"

[lib]
name = "roapi_http"
path = "src/lib.rs"

[[bin]]
name = "roapi-http"
path = "src/main.rs"

[dependencies]
columnq = { path = "../columnq", version = "0" }

# all actix dependencies are patched to use git source until actix-web 4.x lands
actix-web = "4.0.0-beta.4"
actix-http = "3.0.0-beta.4"
actix-service = "2.0.0-beta.3"
# see https://github.com/actix/actix-extras/pull/144 for cors tokio 1 upgrade
actix-cors = "*"

env_logger = "0"
log = "0"
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yaml = "0.8"
clap = { version = ">=3.0.0-beta.2,<4", features = ["color"] }
thiserror = "1"
anyhow = "1"

[features]
simd = ["columnq/simd"]

[dev-dependencies]
actix-rt = "*"
