[package]
name = "roapi-http"
version = "0.4.4"
authors = ["QP Hou <dave2008713@gmail.com>"]
homepage = "https://github.com/roapi/roapi"
license = "MIT"
edition = "2018"

[lib]
name = "roapi_http"
path = "src/lib.rs"

[[bin]]
name = "roapi-http"
path = "src/main.rs"

[dependencies]
columnq = { path = "../columnq", version = "0", default-features = false }
# for datafusion optimization
snmalloc-rs = { version = "0.2", optional = true }

# dependencies related to axum
tokio = { version = "1", features = ["rt-multi-thread"] }
hyper = { version = "0", features = ["http1", "server", "stream", "runtime"] }
# axum = "0.2.8"
axum = { git = "https://github.com/tokio-rs/axum.git", rev = "7692baf83728775afbb7ed7f1a178d741ca74c40" }
tower-http = { git = "https://github.com/tower-rs/tower-http.git", branch = "cors", features = ["cors"] }
tower-layer = "0"
tracing = "0"
pin-project = "1"

env_logger = "0"
log = "0"
serde = "1"
serde_json = "1"
serde_derive = "1"
serde_yaml = "0.8"
clap = { version = ">=3.0.0-beta.2,<4", features = ["color"] }
thiserror = "1"
anyhow = "1"

[features]
default = ["rustls", "snmalloc"]
rustls = ["columnq/rustls"]
native-tls-vendored = ["columnq/native-tls-vendored"]
native-tls = ["columnq/native-tls"]
simd = ["columnq/simd"]
snmalloc = ["snmalloc-rs"]

[dev-dependencies]
actix-rt = "*"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"]}

# TODO: uncomment this when we exclude roapi-http from root workspace
# [profile.release]
# lto = true
# codegen-units = 1
