[package]
name = "roapi-ui"
version = "0.1.0"
edition = "2021"

[lib]
name = "roapi_ui"
path = "src/lib.rs"

[[bin]]
name = "roapi-ui"
path = "src/main.rs"

[dependencies]
ehttp = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# query ui
eframe = "0"
egui = "0"
egui_extras = { version = "0", features = ["syntect"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0"
web-sys = "0"
log = "*"
