[package]
name = "roapi"
version = "0.9.0"
authors = ["QP Hou <dave2008713@gmail.com>"]
homepage = "https://github.com/roapi/roapi"
license = "MIT"
edition = "2018"

[lib]
name = "roapi"
path = "src/lib.rs"

[[bin]]
name = "roapi"
path = "src/main.rs"

[dependencies]
columnq = { path = "../columnq", version = "0", default-features = false }
# for datafusion optimization
snmalloc-rs = { version = "0.2", optional = true }

# dependencies related to axum
tokio = { version = "1", features = ["rt-multi-thread"] }
hyper = { version = "0", features = ["http1", "server", "stream", "runtime"] }
axum = { version = "0.5", features = ["default", "http2"] }
tower-http = { version = "0", features = ["cors"] }
tower-layer = "0"
tracing = "0"
pin-project-lite = "0"
async-trait = "0"

env_logger = "0"
log = "0"
serde = { version = "1", features = ["rc"] }
serde_json = "1"
serde_derive = "1"
serde_yaml = "0.8"
toml = "0.7"
clap = { version = "3", features = ["color"] }
thiserror = "1"
anyhow = "1"

convergence = "0.9"
convergence-arrow = "0.9"

[features]
default = ["rustls", "snmalloc"]
rustls = ["columnq/rustls"]
native-tls-vendored = ["columnq/native-tls-vendored"]
native-tls = ["columnq/native-tls"]
simd = ["columnq/simd"]
snmalloc = ["snmalloc-rs"]
database = ["columnq/database"]
database-sqlite = ["columnq/database-sqlite"]
database-mysql = ["columnq/database-mysql"]

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
async-process = "1.3.0"
tokio-postgres = "0.7"

# TODO: uncomment this when we exclude roapi from root workspace
# [profile.release]
# lto = true
# codegen-units = 1
