[package]
name = "roapi"
version = "0.12.0"
authors = ["QP Hou <dave2008713@gmail.com>"]
homepage = "https://github.com/roapi/roapi"
license = "MIT"
edition = "2021"

[lib]
name = "roapi"
path = "src/lib.rs"

[[bin]]
name = "roapi"
path = "src/main.rs"

[dependencies]
columnq = { path = "../columnq", version = "0", default-features = false }
# for datafusion optimization
snmalloc-rs = { version = "0.3", optional = true }

# dependencies related to axum
tokio = { version = "1", features = ["rt-multi-thread"] }
hyper = { version = "0", features = ["http1", "server"] }
axum = { version = "0.6", features = ["default", "http2"] }
tower = { version = "0" }  # introduced only for tower::layer::util::Stack
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
tower-layer = "0"
tower-service = "0"
tracing = "0"
pin-project-lite = "0"
async-trait = "0"

constant_time_eq = "0"
base64 = "0.22"
env_logger = "0"
log = "0"
serde = { version = "1", features = ["rc"] }
serde_json = "1"
serde_derive = "1"
serde_yaml = "0.9"
toml = "0.7"
clap = { version = "4", features = ["color"] }
thiserror = "1"
snafu = "0"

# flight-sql
arrow-flight = { version = "51", features = ["flight-sql-experimental"] }
tonic = { version = "0.11", features = ["tls"] }
prost = "0"
futures = "0"
# TODO: remove once_cell dependency
once_cell = "*"
dashmap = "5"
uuid = "1"

[dependencies.convergence]
version = "0"
git = "https://github.com/returnString/convergence.git"
rev = "8360bb4f6ee3778f4a4951026a2e1a3cdb6f4df7"

[dependencies.convergence-arrow]
version = "0"
git = "https://github.com/returnString/convergence.git"
rev = "8360bb4f6ee3778f4a4951026a2e1a3cdb6f4df7"

[features]
default = ["rustls", "snmalloc"]
rustls = ["columnq/rustls"]
native-tls-vendored = ["columnq/native-tls-vendored"]
native-tls = ["columnq/native-tls"]
snmalloc = ["snmalloc-rs"]
database = ["columnq/database"]
database-sqlite = ["columnq/database-sqlite"]
database-mysql = ["columnq/database-mysql"]

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
async-process = "1.3.0"
tokio-postgres = "0.7"
tower = "*"
tempfile = "*"
tokio-stream = { version = "*", features = ["net"] }
arrow-cast = "*"
arrow-ipc = "*"  # for flight_sql test

# TODO: uncomment this when we exclude roapi from root workspace
# [profile.release]
# lto = true
# codegen-units = 1
